<resources>
    <string name="app_name">myrealtripwithhyunndy</string>
    <string name="title_activity_add_comment">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="splashtext1">최신 뉴스를 제공합니다</string>
    <string name="splashtext2">뉴스의 키워드를 알아보세요</string>
    <string name="splashtext3">뉴스를 클릭하면 원본 뉴스를 볼 수 있습니다</string>
    <string name="splashtext4">v1.0</string>
    <string name="newstitle">갤럭시S 신제품은 "갤럭시S20"…실물 사진 유출 블라블라블라</string>
    <string name="newsdesc">삼성전자가 다음 달 공개할 예정인 차기 갤럭시 S시리즈 중 한 모델로 추정되는 사진(사진)이 유출됐다. \n 블라블라블라</string>
    <string name="newskeyword">갤럭시S20</string>
    <string name="newskeyword2">모델로</string>
    <string name="newskeyword3">카메라</string>
    <string name="title_activity_detail_news">DetailNewsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
