<?xml version="1.0" encoding="utf-8"?>

<!-- 뉴스리스트 아이템  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/news_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/newstitle"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/news_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/news_thumbnail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/newskeyword"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/news_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_newspaper" />

    <TextView
        android:id="@+id/news_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/newsdesc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/news_title"
        app:layout_constraintTop_toBottomOf="@+id/news_title" />

    <!--
    <TextView
        android:id="@+id/news_keyword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_radius"
        android:padding="5dp"
        android:text="@string/newskeyword"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/news_title"
        app:layout_constraintTop_toBottomOf="@+id/news_desc" />

    <TextView
        android:id="@+id/news_keyword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/rectangle_radius"
        android:padding="5dp"
        android:text="@string/newskeyword2"
        app:layout_constraintStart_toEndOf="@id/news_keyword1"
        app:layout_constraintTop_toTopOf="@+id/news_keyword1" />

    <TextView
        android:id="@+id/news_keyword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/rectangle_radius"
        android:padding="5dp"
        android:text="@string/newskeyword3"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toEndOf="@id/news_keyword2"
        app:layout_constraintTop_toTopOf="@+id/news_keyword1" />
        !-->

</androidx.constraintlayout.widget.ConstraintLayout>